--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,8 +33,7 @@ dependencies:
   logger: ^1.1.0
   percent_indicator: ^4.2.2
   retrofit: ^3.0.1+1
-  shared_preferences: ^2.0.13
-  flutter_screenutil: ^5.5.3+2
+  shared_preferences: ^2.0.15
   pull_to_refresh: ^2.0.0
   shimmer: ^2.0.0
   jwt_decoder: ^2.0.1
@@ -43,6 +42,8 @@ dependencies:
   flutter_svg: ^1.1.4
   form_field_validator: ^1.1.0
   intl_phone_number_input: ^0.7.0+2
+  responsive_framework: ^0.1.8
+  http_parser: ^4.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
