--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.zona_provider_main">
+    package="ae.laravel.zona_provider_main">
     <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="Zona provider"
